Update Displaying a Well Plot with MatPlotLib.ipynb

--- a/Displaying a Well Plot with MatPlotLib.ipynb
+++ b/Displaying a Well Plot with MatPlotLib.ipynb
@@ -49,7 +49,7 @@
    },
    "outputs": [],
    "source": [
-    "well = pd.read_csv(\"C:/Users/Shubham/OneDrive/Desktop/WellData.csv\", header=0)"
+    "well = pd.read_csv("C:\doc\Project\WellData.csv", header=0)"
    ]
   },
   {
