--- a/Displaying a Well Plot with MatPlotLib.ipynb
+++ b/Displaying a Well Plot with MatPlotLib.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-05-22T07:23:06.974999Z",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-05-22T07:23:13.510319Z",
@@ -49,12 +49,12 @@
    },
    "outputs": [],
    "source": [
-    "well = pd.read_csv("C:\doc\Project\WellData.csv", header=0)"
+    "well = pd.read_csv(\"C:\\doc\\Project\\WellData.csv\", header=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-05-22T07:23:14.088712Z",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-05-22T07:23:14.719754Z",
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-05-22T07:23:15.960805Z",
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-05-22T07:23:17.215623Z",
